--- a/_includes/btn-reference.html
+++ b/_includes/btn-reference.html
@@ -1,6 +1,8 @@
 <div class="reference btn-group pull-right">
-  <button class="btn btn-link btn-v2" type="button" data-toggle="collapse" data-target="#{{ include.target }}-changes" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="bottom" data-delay="300" data-title="New in v2.x">
-    v2
-  </button>
-  <a class="btn btn-link btn-bootstrap-docs" href="http://bootstrapdocs.com/v3.3.4/docs/{{ include.docs }}" target="_blank" data-hover="tooltip" data-placement="bottom" data-delay="300" data-title="Bootstrap Docs">{% include icon-bootstrap.svg %}</a>
+  {% if include.docs %}
+    <a class="btn btn-link btn-bootstrap-docs" href="http://bootstrapdocs.com/v3.3.4/docs/{{ include.docs }}" target="_blank" data-hover="tooltip" data-placement="bottom" data-delay="300" data-title="Bootstrap Docs">{% include icon-bootstrap.svg %}</a>
+  {% endif %}
+  {% if include.target %}
+    <button class="btn btn-link btn-v2" type="button" data-toggle="collapse" data-target="#{{ include.target }}-changes" aria-expanded="false" aria-controls="collapseExample" data-hover="tooltip" data-placement="bottom" data-delay="300" data-title="New in v2.x">v2</button>
+  {% endif %}
 </div>
