Add Colors page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,12 @@
       <li class="{% if page.url contains '/importing-variables.html' %}active{% endif %}">
         <a href="importing-variables.html">Importing Variables</a>
       </li>
+      <li class="{% if page.url contains '/colors.html' %}active{% endif %}">
+        <a href="colors.html">Colors</a>
+        <ul class="nav">
+          <li><a href="#colors-grays">Grays</a></li>
+        </ul>
+      </li>
       <li class="{% if page.url contains '/buttons.html' %}active{% endif %}">
         <a href="buttons.html">Buttons</a>
         <ul class="nav">
