--- a/_sass/_lf-docs.scss
+++ b/_sass/_lf-docs.scss
@@ -240,3 +240,13 @@ html, body {
     }
   }
 }
+
+
+/* Colors Page */
+
+.color-swatch {
+  width: 100%;
+  margin-bottom: 5px;
+  padding-top: 100%;
+  border-radius: 2px;
+}
