--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,8 @@
         <a href="colors.html">Colors</a>
         <ul class="nav">
           <li><a href="#colors-grays">Grays</a></li>
+          <li><a href="#colors-common">Common Colors</a></li>
+          <li><a href="#colors-more">More Available Colors</a></li>
         </ul>
       </li>
       <li class="{% if page.url contains '/buttons.html' %}active{% endif %}">
