--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,15 @@
           <li><a href="#buttons-plus">Add a Plus ("+")</a></li>
         </ul>
       </li>
+      <li class="{% if page.url contains '/button-groups.html' %}active{% endif %}">
+        <a href="button-groups.html">Button Groups & Toolbars</a>
+        <ul class="nav">
+          <li><a href="#button-groups-default">Default Group</a></li>
+          <li><a href="#button-groups-sizes">Group Sizes</a></li>
+          <li><a href="#button-groups-dropdown">With Dropdown</a></li>
+          <li><a href="#button-toolbar-default">Default Toolbar</a></li>
+        </ul>
+      </li>
       <li class="{% if page.url contains '/form-controls.html' %}active{% endif %}">
         <a href="form-controls.html">Form Controls</a>
         <ul class="nav">
