--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -617,6 +617,9 @@
 .fycon-source-vine {
   &:before { content: "\e099"; }
 }
+.fycon-source-weibo {
+  &:before { content: "\e0e5"; }
+}
 .fycon-source-wordpress {
   &:before { content: "\e09a"; }
 }
