--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -17,6 +17,18 @@
 }
 
 
+// Button states
+// -------------------------
+//
+
+.button-states() {
+  
+
+}
+
+
+
+
 // Commonly used font-families
 // -------------------------
 //
