Make fycons in buttons slightly transparent.

--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -156,6 +156,7 @@
     vertical-align: middle;
     margin: 0 2px;
     line-height: 1; // Must be smaller than .btn's to prevent fycon from expanding height of button.
+    opacity: 0.8;
 
     &:before {
       vertical-align: initial;
