--- a/src/styles/input-groups.less
+++ b/src/styles/input-groups.less
@@ -40,6 +40,10 @@
       font-size: @font-size-small;
       color: @gray-darkest;
       border-radius: @input-border-radius;
+
+      &:hover {
+        .placeholder(@input-color-placeholder-hover);
+      }
     }
   }
   
