--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -105,7 +105,7 @@
 @padding-xs-vertical:            1px;
 @padding-xs-horizontal:          12px;
 
-@border-radius-base:        3px;
+@border-radius-base:        4px;
 @border-radius-large:       4px;
 @border-radius-small:       2px;
 
@@ -178,11 +178,12 @@
 @input-bg:                       #fff;
 @input-bg-disabled:              @gray-lighter;
 
-@input-color:                    @gray-darker;
-@input-border:                   @gray-light;
-@input-border-radius:            @border-radius-small;
-@input-border-focus:             @blue;
-@input-color-placeholder:        @gray-darkish;
+@input-color:                    @spectrum-color-light-grey9;
+@input-border:                   @spectrum-color-light-grey5;
+@input-border-radius:            @border-radius-base;
+@input-border-focus:             @spectrum-color-blue2;
+@input-color-placeholder:        @spectrum-color-light-grey7;
+@input-color-placeholder-hover:  @spectrum-color-light-grey8;
 
 @input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
 @input-height-xs:                (@font-size-small * 2);
