Change base font to Adobe Clean.

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -74,6 +74,8 @@
 
 // Typography
 // -------------------------
+@font-family-sans-serif:  adobe-clean, Helvetica, Arial, sans-serif; // Adobe Clean is delivered via Typekit: http://coralui.corp.adobe.com/3.16.2/getting-started/#usingTypekit
+
 @line-height-base:        1.428571429; // 20/14
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
 
