--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -269,14 +269,14 @@
 
 // Tooltips
 // -------------------------
-@tooltip-max-width:       200px;
+@tooltip-max-width:             200px;
 @tooltip-arrow-width:           5px;
 
-@tooltip-color:         #ffffff;
+@tooltip-color:                 #fff;
 @tooltip-light-color:           @gray-dark;
 
-@tooltip-bg:          #232731;
-@tooltip-light-bg:              #ffffff;
+@tooltip-bg:                    @spectrum-color-blue3;
+@tooltip-light-bg:              @spectrum-color-light-grey4;
 
 @tooltip-arrow-color:           @tooltip-bg;
 @tooltip-light-arrow-color:     @tooltip-light-bg;
