Added notes to button sizes.

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -199,10 +199,10 @@
 // -------------------------
 
 // Using fixed heights and line-heights instead of padding to improve vertically centering fycons inside buttons
-@btn-height:                     32px;
-@btn-height-xs:                  24px;
-@btn-height-sm:                  28px;
-@btn-height-lg:                  42px;
+@btn-height:                     32px; // Taken from Spectrum
+@btn-height-xs:                  24px; // Not in Spectrum
+@btn-height-sm:                  28px; // Not in Spectrum
+@btn-height-lg:                  42px; // Should be in Spectrum eventually. This is just a guess as to what it might be.
 
 @btn-border-width:               2px;
 
