breaking bootstrap thingies for fun and losses

--- a/src/styles/all.less
+++ b/src/styles/all.less
@@ -1,4 +1,5 @@
-@bootstrap-less: "/lib/bootstrap/less/";
+// @bootstrap-less: "/lib/bootstrap/less/";
+@bootstrap-less: "bootstrap/less/";
 
 @import (reference) "./mixins";
 @import (reference) "./variables";
