--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -1,4 +1,5 @@
-@bootstrap-less: "/lib/bootstrap/less/"; // Declare here for modules that import this file directly.
+// @bootstrap-less: "/lib/bootstrap/less/"; // Declare here for modules that import this file directly.
+@bootstrap-less: "bootstrap/less/"; // Declare here for modules that import this file directly.
 @import (reference) "@{bootstrap-less}/mixins.less";
 
 // Button variants
@@ -236,7 +237,7 @@
   @extension : ~`/(.*)\.(jpg|jpeg|png|gif)/.exec(@{image})[2]`;
   background-image: ~`"url(@{filename}@2x.@{extension})"`;
   background-repeat: @repeat;
-  
+
   @media print, screen,
     (-webkit-min-device-pixel-ratio: 1.25),
     (min-device-pixel-ratio: 1.25),
