brand weibo color

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -63,6 +63,7 @@
 @brand-twitter:       #55acee;
 @brand-vimeo:         #44bbff;
 @brand-vine:          #00a478;
+@brand-weibo:         #e02831;
 @brand-wordpress:     #21759b;
 @brand-yahoo:         #780099;
 @brand-youtube:       #c4302b;
